made some adjustments to the task list

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
       <section class="task-list">
         <h2>Tasks</h2>
 
-        <!-- <div id="tasks">
+         <div id="tasks">
           <div class="task">
             <div id="content">
-              <input type="text" class="text" value="My shiny task" readonly />
+              <input type="text" class="text" value="" readonly />
             </div>
             <div class="actions">
               <button class="edit">Edit</button>
               <button class="delete">Delete</button>
             </div>
-          </div> -->
-          
+          </div>
+
         </div>
       </section>
     </main>
